# dataset-manager

./: .env  .gitignore  README.md  main.py  pyproject.toml
app/api/v1/: api.py
app/api/v1/endpoints/: notifications.py
app/api/v1/endpoints/IO/: api.py  archive.py  create_dataset.py  download_image.py  get_dataset.py  get_image_info.py  get_images_from_dataset.py  remove_dataset.py  remove_image.py  update_dataset.py  upload_image.py
app/api/v1/endpoints/analysis/: api.py  calculate_mean_lines.py  crop.py  gaussian_blur.py  k_means.py
app/core/: config.py  exceptions.py  executor.py  task_manager.py
app/db/: __init__.py  init_db.py  session.py
app/models/: dataset.py  image.py  result.py
app/schemas/: archive.py  common_results.py  dataset.py  image.py  result.py  task.py
app/service/: image_processor.py  task_service.py
app/service/IO/: archive_service.py  base_service.py  dataset_service.py  file_services.py  image_service.py  result_service.py
app/service/computation/: brightness_service.py  cluster_service.py  crop_service.py  filter_service.py
tests/: conftest.py
tests/api/: test_archive_endpoints.py  test_blur_endpoints.py  test_calculate_mean_endpoints.py  test_io_endpoints.py  test_kmeans_endpoints.py
tests/service/: test_archive_service.py  test_dataset_sevice.py  test_file_service.py  test_image_service.py  test_result_service.py
tests/unit/: test_brightness_service.py  test_computation_services.py
