[project]
name = "backend"
version = "0.1.0"
description = "Backend for Dataset Manager"
readme = "README.md"
# Разрешаем версии от 3.10 до 3.13 (не включая 3.13, так как для него мало библиотек)
requires-python = ">=3.10, <3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.131.0",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
]
