[project]
name = "backend"
version = "0.1.0"
description = "Backend for Dataset Manager"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "albumentations>=2.0.8",
    "alembic>=1.18.4",
    "fastapi>=0.131.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch>=0.5.0",
    "sqlalchemy>=2.0.46",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "python-docx>=1.2.0",
]
