[project]
name = "backend"
version = "0.1.0"
description = "Backend for Dataset Manager"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.131.0",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "python-docx>=1.2.0",
]
